--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -1,34 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Tag details</title>
-</head>
-<body>
+
 <h2>{{ tag.name|title }}</h2>
-<p>
-    Tag is associated with
-    {{ tag.startup_set.all|length }}
-    startup{{ tag.startup_set.all|pluralize }}.
-</p>
 {% if tag.startup_set.all %}
 <section>
-    <h3>Startups</h3>
-    <ul>
-        <!-- list of startups related to tag -->
-        {% for startup in tag.startup_set.all %}
-        <li>
-            <a href="#">
-            {{ startup.name }}
-            </a>
-        </li>
-        {% endfor %}
-    </ul>
+<h3>Startup{{ tag.startup_set.count|pluralize }}</h3>
+<p>
+    Tag is associated with
+    {{ tag.startup_set.count }}
+    startup{{ tag.startup_set.count|pluralize }}.
+</p>
+<ul>
+    <!-- list of startups related to tag -->
+    {% for startup in tag.startup_set.all %}
+    <li>
+        <a href="#">
+        {{ startup.name }}
+        </a>
+    </li>
+    {% endfor %}
+</ul>
 </section>
 {% endif %}
 {% if tag.blog_posts.all %}
 <section>
-<h3>Blog Posts</h3>
+<h3>Blog Post{{ tag.blog_posts.count|pluralize }}</h3>
 <ul>
     <!-- list of posts related to tag -->
     {% for post in tag.blog_posts.all %}
@@ -44,5 +38,3 @@
 {% if not tag.startup_set.all and not tag.blog_posts.all %}
 <p>This tag is not related to any content.</p>
 {% endif %}
-</body>
-</html>
