--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -2,9 +2,11 @@
 <ul>
     {% for tag in tag_list %}
     <li>
-        <a href="#">
+        <a href="">
             {{ tag.name|title }}
         </a>
     </li>
+    {% empty %}
+        <li><em>There are currently no Tags available.</em></li>
     {% endfor %}
 </ul>
