--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -5,7 +5,7 @@
         <dt>Date Founded</dt>
         <dd>{{ startup.founded_date|date:"F jS, Y" }}</dd>
         <dt>Website</dt>
-        <dd>{{ startup.website }}</dd>
+        <dd>{{ startup.website|urlize }}</dd>
         <dt>Contact</dt>
         <dd>{{ startup.contact }}</dd>
 
@@ -20,7 +20,7 @@
 
     </dl>
 
-    <p>{{ startup.description }}</p>
+   {{ startup.description|linebreaks }}
 
     {% if startup.newslink_set.all %}
     <section>
