--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -1,3 +1,11 @@
+{% extends "base.html" %}
+{% load staticfiles %}
+
+{% block title %}
+{{ block.super }} - Tag List
+{% endblock %}
+
+{% block content %}
 <h2>Tag List</h2>
 <ul>
     {% for tag in tag_list %}
@@ -10,3 +18,4 @@
         <li><em>There are currently no Tags available.</em></li>
     {% endfor %}
 </ul>
+{% endblock content %}
