--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -1,3 +1,11 @@
+{% extends parent_template|default:"organizer/base_organizer.html" %}
+{% load staticfiles %}
+
+{% block title %}
+{{ block.super }} - Startup
+{% endblock %}
+
+{% block content %}
 <h2>Startup List</h2>
 <ul>
     {% for startup in startup_list %}
@@ -10,3 +18,4 @@
     <li><em>No Startups Available</em></li>
     {% endfor %}
 </ul>
+{% endblock content %}
