Extends parent_template|default:"organizer/base_organizer.html. Add block content.

--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -1,3 +1,11 @@
+{% extends parent_template|default:"organizer/base_organizer.html" %}
+{% load staticfiles %}
+
+{% block title %}
+{{ block.super }} - {{ tag.name|title }}
+{% endblock %}
+
+{% block content %}
 
 <h2>{{ tag.name|title }}</h2>
 {% if tag.startup_set.all %}
@@ -38,3 +46,5 @@
 {% if not tag.startup_set.all and not tag.blog_posts.all %}
 <p>This tag is not related to any content.</p>
 {% endif %}
+
+{% endblock content %}
