--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -1,3 +1,12 @@
+{% extends parent_template|default:"organizer/base_organizer.html" %}
+{% load staticfiles %}
+
+{% block title %}
+{{ block.super }} - {{ startup.name }}
+{% endblock %}
+
+{% block content %}
+
 <article>
 
     <h2>{{ startup.name }}</h2>
@@ -53,3 +62,5 @@
     {% endif %}
 
 </article>
+
+{% endblock content %}
