--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,3 +1,12 @@
+{% extends parent_template|default:"blog/base_blog.html" %}
+{% load staticfiles %}
+
+{% block title %}
+{{ block.super }} - Post List
+{% endblock %}
+
+{% block content %}
+
 {% for post in post_list %}
 <article>
     <header>
@@ -25,3 +34,5 @@
 {% empty %}
 <p><em>No Blog Posts Available</em></p>
 {% endfor %}
+
+{% end block content %}
