Refactor code to footer adding container, row classes.

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,16 +43,19 @@
         </div>
     </div>
 </div><!-- /container -->
-<footer>
-    <p>
-        &copy; 2017
-        <a href="https://DmitryForge.com/">
-            Dmitry Kalnynsh
-        </a>
-    </p>
-    Created based on <a href="https://Django-Unleashed.com/">
-    Django Unleashed</a>
-</footer>
-
+<div class="container">
+    <div class="row">
+        <footer>
+            <p>
+                &copy; 2017
+                <a href="https://DmitryForge.com/">
+                    Dmitry Kalnynsh
+                </a>
+            </p>
+            Created based on <a href="https://Django-Unleashed.com/">
+            Django Unleashed</a>
+        </footer>
+    </div>
+</div>
 </body>
 </html>
