--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="{% static 'images/favicon/favicon.icon' %}">
+    <link rel="shortcut icon" href="{% static 'images/favicon/favicon.ico' %}">
     <link rel="apple-touch-icon" href="{% static 'images/favicon/apple-touch-icon.png' %}">
     <link rel="apple-touch-icon" size="72x72" href="{% static 'images/favicon/apple-touch-icon-72x72.png' %}">
     <link rel="apple-touch-icon" size="114x114" href="{% static 'images/favicon/apple-touch-icon-114x114.png' %}">
