--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,10 @@
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="{% static 'images/favicon/favicon.ico' %}">
-    <link rel="apple-touch-icon" href="{% static 'images/favicon/apple-touch-icon.png' %}">
-    <link rel="apple-touch-icon" size="72x72" href="{% static 'images/favicon/apple-touch-icon-72x72.png' %}">
-    <link rel="apple-touch-icon" size="114x114" href="{% static 'images/favicon/apple-touch-icon-114x114.png' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}">
+    <link rel="apple-touch-icon" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon" size="72x72" href="{% static 'img/favicon/apple-touch-icon-72x72.png' %}">
+    <link rel="apple-touch-icon" size="114x114" href="{% static 'img/favicon/apple-touch-icon-114x114.png' %}">
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#e6e6e6">
     <!-- Windows Phone -->
@@ -21,8 +21,8 @@
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#e6e6e6">
     <!--CSS to Django-->
-    <link rel="stylesheet" href="{% static 'css/bootstrap-grid.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'css/bootstrap-grid.css' %}">-->
+    <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
     <!--[if IE]><script
     src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
     </script><![endif]-->
@@ -32,6 +32,13 @@
 <div class="container"><!-- container -->
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
+            <nav class="nav-bar">
+                <ul>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Startups</a></li>
+                    <li><a href="">Tags</a></li>
+                </ul>
+            </nav>
             <header>
                 <h1>Startup Organizer</h1>
             </header>
@@ -57,5 +64,6 @@
         </footer>
     </div>
 </div>
+<script src="{% static 'js/scripts.min.js' %}"></script>
 </body>
 </html>
