--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,19 @@
 </head>
 <body>
 
+<!--Blog navbar header -->
+{% include "header_navbar/header_navbar.html" %}
+<!--/ Blog navbar header -->
+
+<!-- Blog header-->
+    <div class="blog-header">
+      <div class="container">
+        <h1 class="blog-title">Startup Organizer</h1>
+        <p class="lead blog-description">Some organizer of startups</p>
+      </div>
+    </div>
+<!--/ Blog header-->
+
 <div class="container"><!-- container -->
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
