--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
     <!--<link rel="stylesheet" href="{% static 'css/bootstrap-grid.css' %}">-->
     <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
     <!--[if IE]><script
-    src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
-    </script><![endif]-->
+        src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
+</script><![endif]-->
 </head>
 <body>
 
@@ -34,49 +34,37 @@
 <!--/ Blog navbar header -->
 
 <!-- Blog header-->
-    <div class="blog-header">
-      <div class="container">
+<div class="blog-header">
+    <div class="container">
         <h1 class="blog-title">Startup Organizer</h1>
         <p class="lead blog-description">Some organizer of startups</p>
-      </div>
-    </div>
-<!--/ Blog header-->
-
-<div class="container"><!-- container -->
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <nav class="nav-bar">
-                <ul>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Startups</a></li>
-                    <li><a href="">Tags</a></li>
-                </ul>
-            </nav>
-            <header>
-                <h1>Startup Organizer</h1>
-            </header>
-            <main>
-                {% block content %}
-                    This is default content!
-                {% endblock %}
-            </main>
-        </div>
-    </div>
-</div><!-- /container -->
-<div class="container">
-    <div class="row">
-        <footer>
-            <p>
-                &copy; 2017
-                <a href="https://DmitryForge.com/">
-                    Dmitry Kalnynsh
-                </a>
-            </p>
-            Created based on <a href="https://Django-Unleashed.com/">
-            Django Unleashed</a>
-        </footer>
     </div>
 </div>
-<script src="{% static 'js/scripts.min.js' %}"></script>
+<!--/ Blog header-->
+<div class="container">
+
+    <div class="row">
+
+        <div class="col-sm-8 blog-main"><!-- .blog-main -->
+
+            <div class="blog-post"><!-- .blog-post -->
+
+            {% block content %}
+            {% endblock %}
+
+
+            </div><!-- /.blog-post -->
+
+        {% include "pagination/pagination.html" %}
+
+        </div><!-- /.blog-main -->
+
+        {% include "sidebar/sidebar.html" %}
+
+    </div><!-- /.row -->
+
+    {% include "footer/footer.html" %}
+
+    <script src="{% static 'js/scripts.min.js' %}"></script>
 </body>
 </html>
