Edit classes in base.html, header_navbar.html, sidebar.html.

--- a/templates/header_navbar/header_navbar.html
+++ b/templates/header_navbar/header_navbar.html
@@ -1,11 +1,11 @@
 <div class="blog-masthead">
     <div class="container">
-        <nav class="nav">
-            <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Blog</a>
-            <a class="nav-link" href="#">Startups</a>
-            <a class="nav-link" href="#">Tags</a>
-            <a class="nav-link" href="#">About</a>
+        <nav class="blog-nav">
+            <a class="blog-nav-item active" href="#">Home</a>
+            <a class="blog-nav-item" href="#">Blog</a>
+            <a class="blog-nav-item" href="#">Startups</a>
+            <a class="blog-nav-item" href="#">Tags</a>
+            <a class="blog-nav-item" href="#">About</a>
         </nav>
     </div>
 </div>
