--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>
-        {% block title %}
-        Startup Organizer
-        {% endblock %}
-    </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="django blog">
+    <meta name="author" content="Kalnynsh">
     <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}">
     <link rel="apple-touch-icon" href="{% static 'img/favicon/apple-touch-icon.png' %}">
     <link rel="apple-touch-icon" size="72x72" href="{% static 'img/favicon/apple-touch-icon-72x72.png' %}">
@@ -20,12 +17,28 @@
     <meta name="msapplication-navbutton-color" content="#e6e6e6">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#e6e6e6">
-    <!--CSS to Django-->
-    <!--<link rel="stylesheet" href="{% static 'css/bootstrap-grid.css' %}">-->
-    <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
-    <!--[if IE]><script
-        src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
-</script><![endif]-->
+
+    <title>
+        {% block title %}
+        Startup Organizer
+        {% endblock %}
+    </title>
+
+    <!--CSS for Django-->
+    <!--Bootstrap core CSS-->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
+     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link rel="stylesheet" href="{% static 'css/ie10-viewport-bug-workaround.css' %}">
+
+    <!-- Custom styles for Blog -->
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.j"></script>
+    <![endif]-->
 </head>
 <body>
 
@@ -34,7 +47,7 @@
 <!--/ Blog navbar header -->
 
 <!-- Blog header-->
-<div class="blog-header">
+<div class="blog-header" id="top">
     <div class="container">
         <h1 class="blog-title">Startup Organizer</h1>
         <p class="lead blog-description">Some organizer of startups</p>
@@ -49,13 +62,13 @@
 
             <div class="blog-post"><!-- .blog-post -->
 
-            {% block content %}
-            {% endblock %}
+                {% block content %}
+                {% endblock %}
 
 
             </div><!-- /.blog-post -->
 
-        {% include "pagination/pagination.html" %}
+            {% include "pagination/pagination.html" %}
 
         </div><!-- /.blog-main -->
 
@@ -63,8 +76,18 @@
 
     </div><!-- /.row -->
 
-    {% include "footer/footer.html" %}
+</div>
 
-    <script src="{% static 'js/scripts.min.js' %}"></script>
+{% include "footer/footer.html" %}
+
+<!-- Bootstrap core JavaScript -->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
+<!--<script>-->
+    <!--window.jQuery || document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')-->
+<!--</script>-->
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 </body>
 </html>
