--- a/templates/header_navbar/header_navbar.html
+++ b/templates/header_navbar/header_navbar.html
@@ -1,11 +1,10 @@
 <div class="blog-masthead">
     <div class="container">
         <nav class="blog-nav">
-            <a class="blog-nav-item active" href="#">Home</a>
-            <a class="blog-nav-item" href="#">Blog</a>
-            <a class="blog-nav-item" href="#">Startups</a>
-            <a class="blog-nav-item" href="#">Tags</a>
-            <a class="blog-nav-item" href="#">About</a>
+            <a class="blog-nav-item active" href="/">Home</a>
+            <a class="blog-nav-item" href="/blog/">Blog</a>
+            <a class="blog-nav-item" href="/startup/">Startups</a>
+            <a class="blog-nav-item" href="/tag/">Tags</a>
         </nav>
     </div>
 </div>
