--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -10,7 +10,7 @@
 <ul>
     {% for startup in startup_list %}
     <li>
-        <a href="">
+        <a href="{% url 'organizer_startup_detail' slug=startup.slug %}">
             {{ startup.name }}
         </a>
     </li>
