--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,7 +11,7 @@
 <article>
     <header>
         <h2>
-            <a href="{% url 'blog_post_detail' year=post.pub_date.year month=post.pub_date.month slug=post.slug %}">
+            <a href="{{ post.get_absolute_url }}">
                 {{ post.title|title }}
             </a>
         </h2>
@@ -26,7 +26,7 @@
         {{ post.text|truncatewords:20 }}
     </p>
     <p>
-        <a href="{% url 'blog_post_detail' post.pub_date.year post.pub_date.month post.slug %}">
+        <a href="{{ post.get_absolute_url }}">
             Read more&hellip;
         </a>
     </p>
