Add class for button.

--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -22,7 +22,7 @@
             <span class="helptext input-group-addon">A label for URL config</span>
         </p>
     </div>
-    <button type="button">
+    <button type="button" class="btn btn-default">
         Create Tag
     </button>
 </form>
