--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -39,31 +39,9 @@
     </div>
     <br/>
     <div class="alert alert-danger">
-        {% if form.slug.errors %}
-        <ul class="custom_error_list">
-            {% for error in form.slug.errors %}
-            <li>
-                <em>{{ error }}</em>
-            </li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% if form.name.errors %}
-        <ul class="custom_error_list">
-            {% for error in form.name.errors %}
-            <li>
-                <em>{{ error }}</em>
-            </li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% if form.non_field_errors %}
-        <ul class="custom_error_list">
-            {% for error in form.non_field_errors %}
-            <li><em>{{ error }}</em></li>
-            {% endfor %}
-        </ul>
-        {% endif %}
+        {{ form.non_field_errors }}
+        {{ form.name.errors }}
+        {{ form.slug.errors }}
     </div>
 </form>
 {% endblock %}
