Replace help text 'A label for URL config' with calling {{ form.slug.help_text }}.

--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -19,7 +19,7 @@
         <div class="form-control">
             {{ form.slug }}
         </div>
-        <span class="input-group-addon">A label for URL config</span>
+        <span class="input-group-addon">{{ form.slug.help_text }}</span>
     </div>
     <br/>
     <div class="row">
