--- a/organizer/templates/organizer/tag_confirm_delete.html
+++ b/organizer/templates/organizer/tag_confirm_delete.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-md-offset-9 col-md-3">
             <button type="button" class="btn btn-danger">
-                <a href="{{ tag.get_absolute_url }}">Cansel</a>
+                <a href="{{ tag.get_absolute_url }}">Cancel</a>
             </button>
             <br>
             <button type="button" class="btn btn-primary">
