--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -6,10 +6,19 @@
 {% endblock %}
 
 {% block content %}
-<h2>Tag List</h2>
-<ul>
+<div class="page-header">
+    <h2>Tag List</h2>
+</div>
+<div>
+    <label class="label label-info">
+        <a href="{% url 'organizer_tag_create' %}">
+            Create New Tag
+        </a>
+    </label>
+</div>
+<ul class="list-group">
     {% for tag in tag_list %}
-    <li>
+    <li class="list-group-item">
         <a href="{{ tag.get_absolute_url }}">
             {{ tag.name|title }}
         </a>
