--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="blog-h2">Tag List</h2>
+<h2 class="blog-h2-tag-list">Tag List</h2>
 
 <ul class="list-group">
     {% for tag in tag_list %}
