--- a/organizer/templates/organizer/tag_form_update.html
+++ b/organizer/templates/organizer/tag_form_update.html
@@ -16,9 +16,9 @@
             {% endif %}
         </div>
         <br>
-        {% if field.error %}
+        {% if field.errors %}
             <div class="alert alert-danger">
-                {{ field.error }}
+                {{ field.errors }}
             </div>
         {% endif %}
         <br>
