--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -16,9 +16,9 @@
             {% endif %}
         </div>
         <br>
-        {% if field.error %}
+        {% if field.errors %}
             <div class="alert alert-danger">
-                {{ field.error }}
+                {{ field.errors }}
             </div>
         {% endif %}
         <br>
