--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -34,24 +34,31 @@
     {% if startup.newslink_set.all %}
     <section>
         <h3>Recent News</h3>
-        <ul>
+        <ul class="list-group">
             {% for newslink in startup.newslink_set.all %}
-            <li>
+            <li class="list-group-item">
                 <a href="{{ newslink.link }}">
                     {{ newslink.title|title }}
                 </a>
             </li>
             {% endfor %}
         </ul>
+        <div class="blog-btn-margin">
+            <button class="btn btn-info">
+                <a href="{% url 'organizer_newslink_create' %}">
+                    Create New Tag
+                </a>
+            </button>
+        </div>
     </section>
     {% endif %}
 
     {% if startup.blog_posts.all %}
     <section>
         <h3>Blog Post{{ startup.blog_posts.all|pluralize }}</h3>
-        <ul>
+        <ul class="list-group">
             {% for post in startup.blog_posts.all %}
-            <li>
+            <li class="list-group-item">
                 <a href="{{ post.get_absolute_url }}">
                     {{ post.title|title }}
                 </a>
