--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,3 +1,6 @@
+{% extends parent_template|default:"organizer/base_organizer.html" %}
+{% load staticfiles %}
+{% block content %}
 <article>
 
     <header>
@@ -10,41 +13,46 @@
         </p>
     </header>
 
-    {{ post.text|linebreaks }}
-
-    {% if post.startups.all or post.tags.all %}
-    <footer>
-        {% if post.startups.all %}
-        <section>
-            <h3>
-                Startup{{ post.startups.count|pluralize }}
-            </h3>
-            <ul>
-                {% for startup in post.startups.all %}
-                <li>
+    <div>
+        {{ post.text|linebreaks }}
+    </div>
+        {% if post.startups.all or post.tags.all %}
+            <div>
+                {% if post.startups.all %}
+                <section>
+                    <h3>
+                        Startup{{ post.startups.count|pluralize }}
+                    </h3>
+                    <ul class="list-group>
+                            {% for startup in post.startups.all %}
+                            <li class="list-group-item">
                     <a href="{{ startup.get_absolute_url }}">
                         {{ startup.name }}
                     </a>
-                </li>
-                {% endfor %}
-            </ul>
-        </section>
-        {% endif %}
+                    </li>
+                    {% endfor %}
+                    </ul>
+                </section>
+                {% endif %}
 
-        {% if post.tags.all %}
-        <section>
-            <h3>Tag{{ post.tags.count|pluralize }}</h3>
-            <ul>
-                {% for tag in post.tags.all %}
-                <li>
+                {% if post.tags.all %}
+                <section>
+                    <h3>Tag{{ post.tags.count|pluralize }}</h3>
+                    <ul class="list-group>
+                            {% for tag in post.tags.all %}
+                            <li class="list-group-item">
                     <a href="{{ tag.get_absolute_url }}">
                         {{ tag.name|title }}
                     </a>
-                </li>
-                {% endfor %}
-            </ul>
-        </section>
+                    </li>
+                    {% endfor %}
+                    </ul>
+                </section>
+                {% endif %}
+            </div>
+
         {% endif %}
-    </footer>
-    {% endif %}
+
 </article>
+
+{% endblock content %}
