--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,10 +1,16 @@
-{% extends parent_template|default:"organizer/base_organizer.html" %}
+{% extends parent_template|default:"blog/base_blog.html" %}
 {% load staticfiles %}
+
+{{ block.super }} - {{ post.title|title }}
+
 {% block content %}
 <article>
 
     <header>
         <h2>{{ post.title|title }}</h2>
+        <ul>
+            <li><a href="{{ post.get_update_url }}">Edit Post</a></li>
+        </ul>
         <p>
             Written on
             <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
@@ -17,7 +23,7 @@
         {{ post.text|linebreaks }}
     </div>
         {% if post.startups.all or post.tags.all %}
-            <div>
+            <footer> <!--The footer for article -->
                 {% if post.startups.all %}
                 <section>
                     <h3>
@@ -49,7 +55,7 @@
                     </ul>
                 </section>
                 {% endif %}
-            </div>
+            </footer>
 
         {% endif %}
 
