--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,6 +15,9 @@
                 {{ post.title|title }}
             </a>
         </h2>
+        <ul>
+            <li><a href="{{ pos.get_update_url }}">Edit Post</a></li>
+        </ul>
         <p>
             Written on:
             <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
