--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -34,19 +34,25 @@
     {% if startup.newslink_set.all %}
     <section>
         <h3>Recent News</h3>
+
         <ul class="list-group">
             {% for newslink in startup.newslink_set.all %}
             <li class="list-group-item">
                 <a href="{{ newslink.link }}">
                     {{ newslink.title|title }}
                 </a>
+                <button class="btn btn-info">
+                    <a href="{{ newslink.get_update_url }}">
+                        Edit Link
+                    </a>
+                </button>
             </li>
             {% endfor %}
         </ul>
         <div class="blog-btn-margin">
             <button class="btn btn-info">
                 <a href="{% url 'organizer_newslink_create' %}">
-                    Create New Tag
+                    Add Article
                 </a>
             </button>
         </div>
