--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -8,6 +8,11 @@
 {% block content %}
 
 <h2>{{ tag.name|title }}</h2>
+<div>
+    <a href="{{ tag.get_update_url }}">
+        <span class="label label-default">Edit Tag</span>
+    </a>
+</div>
 {% if tag.startup_set.all %}
 <section>
 <h3>Startup{{ tag.startup_set.count|pluralize }}</h3>
