Update link to 'Edit Tag' <a href="{{ tag.get_update_url }}">.

--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -15,7 +15,7 @@
             {{ tag.name|title }}
         </a>
         <a href="{{ tag.get_update_url }}">
-            <span>Edit Tag</span>
+            <span class="label label-default">Edit Tag</span>
         </a>
     </li>
     {% empty %}
