Add link to 'Edit Startup' <a href="{{ startup.get_update_url }}">.

--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -13,6 +13,9 @@
         <a href="{{ startup.get_absolute_url }}">
             {{ startup.name }}
         </a>
+        <a href="{{ startup.get_update_url }}">
+            <span>Edit Startup</span>
+        </a>
     </li>
     {% empty %}
     <li class="list-group-item">
