--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <h2>{{ tag.name|title }}</h2>
-<div>
+<div class="blog-label-edit-tag">
     <a href="{{ tag.get_update_url }}">
         <span class="label label-default">Edit Tag</span>
     </a>
