--- a/organizer/templates/organizer/startup_form_update.html
+++ b/organizer/templates/organizer/startup_form_update.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<form action="{{ url startup.get_update_url }}" method="post">
+<form action="{{ startup.get_update_url }}" method="post">
     {% csrf_token %}
     {% for field in form %}
         <div class="input-group">
