--- a/organizer/templates/organizer/newslink_form.html
+++ b/organizer/templates/organizer/newslink_form.html
@@ -25,7 +25,7 @@
     {% endfor %}
     <div class="row">
         <div class="col-md-offset-9 col-md-3">
-            <button type="button" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary">
                 Link Article
             </button>
         </div>
