Change type of button to submit.

--- a/organizer/templates/organizer/startup_form.html
+++ b/organizer/templates/organizer/startup_form.html
@@ -10,7 +10,7 @@
     {{ form.as_p }}
     <div class="row">
         <div class="col-md-offset-9 col-md-3">
-            <button type="button" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary">
                 Create Startup
             </button>
         </div>
