--- a/organizer/templates/organizer/tag_confirm_delete.html
+++ b/organizer/templates/organizer/tag_confirm_delete.html
@@ -20,7 +20,7 @@
                 <a href="{{ tag.get_absolute_url }}">Cancel</a>
             </button>
             <br>
-            <button type="button" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary">
                 Delete Tag
             </button>
         </div>
