Add class style badge fro span Edit text.

--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -48,7 +48,7 @@
                 </a>
                 <button class="btn btn-info">
                     <a href="{{ newslink.get_update_url }}">
-                        Edit Link
+                       <span class="badge">Edit Link</span>
                     </a>
                 </button>
             </li>
