--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -14,7 +14,7 @@
             {{ startup.name }}
         </a>
         <a href="{{ startup.get_update_url }}">
-            <span>Edit Startup</span>
+            <span class="badge">Edit Startup</span>
         </a>
     </li>
     {% empty %}
