--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,6 +8,16 @@
 
     <header>
         <h2>{{ post.title|title }}</h2>
+        <div class="blog-button-edit-post">
+            <button type="button" class="btn btn-primary">
+                <a href="{{ post.get_update_url }}">Edit Post</a>
+            </button>
+        </div>
+        <div class="blog-button-delete">
+            <button type="button" class="btn btn-warning">
+                <a href="{{ post.get_delete_url }}">Delete Post</a>
+            </button>
+        </div>
         <p>
             Written on
             <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
@@ -19,11 +29,7 @@
     <div>
         {{ post.text|linebreaks }}
     </div>
-    <div class="blog-button-edit-post">
-        <button type="button" class="btn btn-default">
-            <a href="{{ post.get_update_url }}">Edit Post</a>
-        </button>
-    </div>
+
         {% if post.startups.all or post.tags.all %}
             <footer> <!--The footer for article -->
                 {% if post.startups.all %}
