Update style class name of button with link to Delete Post.

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,7 +13,7 @@
                 <a href="{{ post.get_update_url }}">Edit Post</a>
             </button>
         </div>
-        <div class="blog-button-delete">
+        <div class="blog-button-delete-post">
             <button type="button" class="btn btn-warning">
                 <a href="{{ post.get_delete_url }}">Delete Post</a>
             </button>
