--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
 {% for post in post_list %}
 <article>
     <header>
-        <h2>
+        <h2 class="blog-post-list-h2">
             <a href="{{ post.get_absolute_url }}">
                 {{ post.title|title }}
             </a>
@@ -30,9 +30,12 @@
             Read more&hellip;
         </a>
     </p>
-    <div class="blog-label-edit-post">
+    <div class="blog-label-edit-delete-post">
         <a href="{{ post.get_update_url }}">
             <span class="label label-default">Edit Post</span>
+        </a>
+        <a href="{{ post.get_delete_url }}">
+            <span class="label label-warning">Delete Post</span>
         </a>
     </div>
 </article>
