--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -223,3 +223,9 @@ h6, .h6 {
     margin-top: 12px;
     margin-left: 6px;
 }
+
+#post_confirm_delete.html
+.blog-btns-cancel-delete {
+    display: block;
+    margin-top: 16px;
+}
