--- a/organizer/templates/organizer/newslink_confirm_delete.html
+++ b/organizer/templates/organizer/newslink_confirm_delete.html
@@ -10,7 +10,8 @@
 
         <div class="input-group">
             <div class="form-control">
-                Are you sure, you want to delete News Link {{ newslink.title }}?
+                Are you sure, you want to delete link
+                to article {{ newslink.name }}?
             </div>
         </div>
         <br>
@@ -21,7 +22,7 @@
             </button>
             <br>
             <button type="submit" class="btn btn-primary">
-                Delete News Link
+                Delete Article Link
             </button>
         </div>
     </div>
