--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -42,9 +42,11 @@
 {% empty %}
 <p><em>No Blog Posts Available</em></p>
 {% endfor %}
+<div class="blog-btn-new-blog">
 <button type="button" class="btn btn-info">
     <a href="{% url 'blog_post_create' %}">
         Write New Blog Post
     </a>
 </button>
+</div>
 {% endblock content %}
