--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -10,7 +10,7 @@
 <article>
 
     <h2>{{ startup.name }}</h2>
-    <div>
+    <div class="blog-edit-startup">
         <a href="{{ startup.get_update_url }}">
             <span class="label label-default">Edit Startup</span>
         </a>
@@ -46,18 +46,22 @@
                 <a href="{{ newslink.link }}">
                     {{ newslink.title|title }}
                 </a>
-
-                <a href="{{ newslink.get_update_url }}">
-                       <span class="label label-info">Edit Link</span>
-                </a>
-
-                <a href="{{ newslink.get_delete_url }}">
-                       <span class="label label-danger">Delete Link</span>
-                </a>
+                <ul class="blog-link-edit-delete">
+                    <li>
+                        <a href="{{ newslink.get_update_url }}">
+                               <span class="label label-info">Edit Link</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ newslink.get_delete_url }}">
+                               <span class="label label-danger">Delete Link</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
             {% endfor %}
         </ul>
-        <div class="blog-btn-margin">
+        <div class="blog-btn-add-article">
             <button class="btn btn-info">
                 <a href="{% url 'organizer_newslink_create' %}">
                     Add Article
