--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -8,11 +8,18 @@
 {% block content %}
 
 <h2>{{ tag.name|title }}</h2>
-<div class="blog-label-edit-tag">
-    <a href="{{ tag.get_update_url }}">
-        <span class="label label-default">Edit Tag</span>
-    </a>
-</div>
+<ul class="blog-tag-edit-delete">
+    <li>
+        <a href="{{ tag.get_update_url }}">
+            <span class="label label-info">Edit Tag</span>
+        </a>
+    </li>
+    <li>
+        <a href="{{ tag.get_delete_url }}">
+            <span class="label label-danger">Delete Tag</span>
+        </a>
+    </li>
+</ul>
 {% if tag.startup_set.all %}
 <section>
 <h3>Startup{{ tag.startup_set.count|pluralize }}</h3>
