Create link to Delete Startup url.

--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -16,6 +16,9 @@
         <a href="{{ startup.get_update_url }}">
             <span class="badge">Edit Startup</span>
         </a>
+        <a href="{{ startup.get_delete_url }}">
+            <span class="badge">Delete Startup</span>
+        </a>
     </li>
     {% empty %}
     <li class="list-group-item">
