Update <span class..> for Edit, Delete Startup.

--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -14,10 +14,10 @@
             {{ startup.name }}
         </a>
         <a href="{{ startup.get_update_url }}">
-            <span class="badge">Edit Startup</span>
+            <span class="label label-info">Edit Startup</span>
         </a>
         <a href="{{ startup.get_delete_url }}">
-            <span class="badge">Delete Startup</span>
+            <span class="label label-danger">Delete Startup</span>
         </a>
     </li>
     {% empty %}
