Add link <a>href="{% url 'contact' %}">Contact</a>.

--- a/templates/header_navbar/header_navbar.html
+++ b/templates/header_navbar/header_navbar.html
@@ -5,6 +5,7 @@
             <a class="blog-nav-item" href="{% url 'blog_post_list' %}">Blog</a>
             <a class="blog-nav-item" href="{% url 'organizer_startup_list' %}">Startups</a>
             <a class="blog-nav-item" href="{% url 'organizer_tag_list' %}">Tags</a>
+            <a class="blog-nav-item" href="{% url 'contact' %}">Contact</a>
         </nav>
     </div>
 </div>
