--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
 <div class="blog-header" id="top">
     <div class="container">
         <h1 class="blog-title">Startup Organizer</h1>
-        <p class="lead blog-description">Some organizer of startups</p>
+        <p class="lead blog-description">Organizer of startups</p>
     </div>
 </div>
 <!--/ Blog header-->
