--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,9 @@
     </div>
 </div>
 <!--/ Blog header-->
+<!-- Messages -->
+    {% include "messages/messages.html" %}
+<!--/ Messages -->
 <div class="container">
 
     <div class="row">
