Exclude pagination/pagination.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 
             </div><!-- /.blog-post -->
 
-            {% include "pagination/pagination.html" %}
+            <!--{% include "pagination/pagination.html" %}-->
 
         </div><!-- /.blog-main -->
 
