--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -33,4 +33,20 @@
         </a>
     </button>
 </div>
+<nav class="blog-pagination">
+    <li>
+        Page {{ startup_list.number }}
+        of {{ startup_list.paginator.num_pages }}
+    </li>
+    <li>
+        <a class="btn btn-outline-primary" href="#">
+            Older
+        </a>
+    </li>
+    <li>
+        <a class="btn btn-outline-secondary disabled" href="#">
+            Newer
+        </a>
+    </li>
+</nav>
 {% endblock content %}
