--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -36,7 +36,7 @@
 <nav class="blog-pagination">
     <li>
         Page {{ startup_list.number }}
-        of {{ startup_list.paginator.num_pages }}
+        of {{ paginator.num_pages }}
     </li>
     <li>
         <a class="btn btn-outline-primary" href="#">
